nginx-adobe/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-adobe-nginx
  namespace: adobe
spec:
  podSelector:
    matchLabels:
      run: adobe-nginx
  ingress:
  - ports:
    - port: 80
      protocol: TCP
